Ali cloud 组件测试 - Dubbo